# romi-rover-build-and-test

./: .gitignore  .gitmodules  .travis.old  .travis.yml  CMakeLists.txt  README.md  codecov.yml
applications/: CMakeLists.txt  README.md  YAGNI.txt  plot.py  rover-am1-start  rover-am1-stop
applications/batterymonitor/: CMakeLists.txt
applications/calibration/: calibration_cli.c  convert.py
applications/camera_recorder/: CMakeLists.txt  camera_recorder.c  camera_recorder.h  rcgen.json
applications/config/: config-test.json
applications/gimbal_bldc/: CMakeLists.txt  gimbal_bldc.c  rcgen.json
applications/grbl/: CMakeLists.txt  grbl.c
applications/navigation/: CMakeLists.txt
applications/navigation2/: CMakeLists.txt
applications/oquam/: CMakeLists.txt  OquamFactory.cpp  config.json  main.cpp
applications/rcdiscover/: CMakeLists.txt
applications/romi-cablebot/: CMakeLists.txt  config.json  main-cmdline.cpp  main.cpp
applications/romi-camera/: main.cpp
applications/romi-cnc/: CMakeLists.txt  OquamFactory.cpp  OquamFactory.h  main.cpp
applications/romi-config/: CMakeLists.txt  main.cpp
applications/romi-monitor/: cablebot.html  camera.html  cameramount.html  index.html  programs.html
applications/romi-python/: SupportVectorMachine.py  main.py  nav.py  svm.py  svm0.py  triple.py  unet.py
applications/romi-remote-client/: CMakeLists.txt
applications/romi-rover/: CMakeLists.txt  main.cpp
applications/scratch-test/: CMakeLists.txt
applications/serial-camera/: CMakeLists.txt  main.cpp
applications/test/: webproxy_ws_tests.sh
applications/unet/: unet.py  unet_test.py
applications/user-interface/: config.json
applications/webproxy/: CMakeLists.txt  webproxy.h
applications/weeder/: CMakeLists.txt  eval.cpp
applications/weeder2/: CMakeLists.txt  config.json
brush_motors/: CMakeLists.txt  brush_motors.c  brush_motors.h  rcgen.json
camera_recorder/: CMakeLists.txt  camera_recorder.c  camera_recorder.h  rcgen.json
control_panel/: CMakeLists.txt  control_panel.c  control_panel.h  rcgen.json
control_panel/ControlPanel/: ControlPanel.ino  Parser.cpp  Parser.h
fake_camera/: CMakeLists.txt  fake_camera.c  fake_camera.h  rcgen.json
fake_cnc/: CMakeLists.txt  fake_cnc.c  fake_cnc.h  rcgen.json
fake_motors/: CMakeLists.txt  fake_motors.c  fake_motors.h  rcgen.json
firmware/: CMakeLists.txt
firmware/BLDC/: ArduinoConstants.h  ArduinoImpl.h  BLDC.cpp  BLDC.h  BLDC.ino  Controller.cpp  Controller.h  DigitalOut.h  IArduino.h  IEncoder.h  IOutputPin.h  IPwmGenerator.h  ITimerHandler.h  PwmEncoder.cpp  PwmEncoder.h  PwmGenerator.cpp  PwmGenerator.h  PwmOut.h  Test.cpp  pins.h
firmware/BatteryMonitor/: BatteryMonitor.ino  VeDirectFrameHandler.cpp  VeDirectFrameHandler.h
firmware/CablebotGimbal/: Readme.md  extra_script.py  platformio.ini
firmware/CablebotMotorController/: Readme.md  erase_configuration.py  platformio.ini  print_error.py  test_and_save_configuration.py
firmware/CrystalDisplay/: CrystalDisplay.ino
firmware/Oquam/: Oquam.ino  gshield.h
firmware/RomiOdrive/: platformio.ini
firmware/RoverMotorController/: ArduinoUno.cpp  ArduinoUno.h  Average.h  IArduino.h  IEncoder.h  IFilter.h  IMotorController.h  IPWM.h  IncrementalEncoder.h  IncrementalEncoderUno.cpp  IncrementalEncoderUno.h  MotorController.cpp  MotorController.h  MotorControllerCommands.cpp  MotorControllerCommands.h  MotorControllerTests.cpp  MotorControllerTests.h  MotorControllerVersion.h  PIController.h  RadioControl.h  RadioControlUno.h  Readme.md  RoverMotorController.ino  SpeedEnvelope.h
firmware/StepperSteering/: AnalogAbsoluteEncoder.h  ArduinoUno.cpp  ArduinoUno.h  IArduino.h  IEncoder.h  IFilter.h  IncrementalEncoder.h  IncrementalEncoderUno.cpp  IncrementalEncoderUno.h  MovingAverage.cpp  MovingAverage.h  SteeringVersion.h  StepperSteering.ino  config.h  pins.cpp  stepper.cpp  stepper.h
firmware/ToolCarrierJrkG2/: Parser.cpp
fsdb/: CMakeLists.txt  fsdb_node.c  fsdb_node.h  rcgen.json
gimbal_servo/: CMakeLists.txt  gimbal_servo.c  gimbal_servo.h  rcgen.json
grbl/: CMakeLists.txt  grbl.c  grbl.h  rcgen.json
interface/: CMakeLists.txt  interface.c  interface.h  rcgen.json
interface/html/: index.html  script.html
interface/scripts/: chatelain-lite.json  rover-chatelain.json  rover-lite-chatelain.json
libromi/: CMakeLists.txt
libromi/include/: romi.h
libromi/src/: fs.c  fsdb.c  image.c  list.c  mem.c  quaternion.c  rover.c  vector.c
librover/: CMakeLists.txt
librover/test/: CMakeLists.txt
navigation/: CMakeLists.txt  navigation.c  navigation.h  rcgen.json
oquam/: CMakeLists.txt  Readme.md  oquam.hpp  rcgen.json
oquam/Oquam/: Oquam.ino  Parser.cpp  Parser.h  action.cpp  action.h  block.cpp  block.h  config.h  encoder.cpp  encoder.h  extctrlr.h  extctrlr_mega2560.h  extctrlr_uno.h  gshield.h  pins.cpp  pins.h  stepper.cpp  stepper.h  trigger.cpp  trigger.h
oquam/docs/: Readme.md  path.csv
oquam/src/: Controller.hpp  OquamStepperController.cpp  StepperController.hpp  action.c  action.h  cnc.c  (+22 more)
picamera/: CMakeLists.txt  convert.c  convert.h  picamera.cc  picamera.h  rcgen.json
realsense/: CMakeLists.txt  convert.c  convert.h  rcgen.json  realsense.cc  realsense.h
romi-rover/: CMakeLists.txt  romi-rover-execute.sh
script_engine/: CMakeLists.txt  rcgen.json  script_engine.c  script_engine.h
tests-hardware/: 01-test-motors.py  02-test-encoders.py  03-tests_pid.py  04-test-joystick.cpp  08-cnc.py  CMakeLists.txt  copy-romi-rover-bin.sh  joystick-setup.sh  motor_controller.py  network-hotspot-setup.sh  oquam_controller.py  romi_device.py  testlib.py
video4linux/: CMakeLists.txt  camera_v4l.c  camera_v4l.h  rcgen.json  video4linux.c  video4linux.h
webproxy/: CMakeLists.txt  rcgen.json  webproxy.c  webproxy.h
weeder/: CMakeLists.txt  otsu.c  otsu.h  point.c  point.h  profiling.c  profiling.h  quincunx.c  quincunx.h  rcgen.json  svm.c  svm.h  weeder.c  weeder.h  weeder_compute.c  weeder_eval.c  weeding.c  weeding.h  workspace.c  workspace.h
wheel_odometry/: CMakeLists.txt  rcgen.json  wheel_odometry.c  wheel_odometry.h
(+1287 files in other folders)
